# DualSense-CPP

./: .gitignore  CMakeLists.txt  directory.txt
DualSenseWindows/src/DualSenseWindows/: IO.cpp
include/: DS5State.h  DSW_Api.h  Device.h  Helpers.h  IO.h
src/: DS5_Input.cpp  DS5_Input.h  DS5_Output.cpp  DS5_Output.h  DS_CRC32.cpp  DS_CRC32.h  Helpers.cpp  IO.cpp
test/: wWinMain.cpp
